<resources>
    <string name="app_name">Game On</string>
    <string name="action_current_session">Current Session</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_nearby_sessions_main">Nearby Sessions</string>
    <string name="title_activity_user_profile">User Profile</string>

    <!--Strings for SplashFragment.java-->
    <string name="fragment_splash_login_button">Login</string>
    <string name="fragment_splash_register_button">Register</string>

    <!--Strings for LoginFragment.java-->
    <string name="fragment_login_username">Username</string>
    <string name="fragment_login_password">Password</string>
    <string name="fragment_login_login_button">Login</string>
    <string name="fragment_login_forgot_password_button">Forgot Password</string>

    <!--Strings for RegisterFragment.java-->
    <string name="fragment_register_email">Email Address</string>
    <string name="fragment_register_password">Password</string>
    <string name="fragment_register_password_confirm">Reenter password</string>
    <string name="fragment_register_register_button">Register</string>

    <!--Strings for ForgotPassword.java-->
    <string name="fragment_forgot_password_text">Please enter the email address
        associated with your Game On account. You will receive an email to reset your password.</string>
    <string name="fragment_forgot_password_email_hint_text">Enter e-mail here</string>
    <string name="fragment_forgot_password_button">Reset</string>

    <!--Strings for UserSearchFragment.java-->
    <string name="list_item_user_games_game_pic">Picture of Game</string>
    <string name="list_item_user_games_game_open">No games open</string>
    <string name="list_item_user_games_list_button">See List</string>
    <string name="list_item_user_games_quick_button">Quick Join</string>
    <string name="radio_na">NA</string> <!-- this string also appears in UserGameFragment.java -->
    <string name="radio_1">1</string>
    <string name="radio_2">2</string>
    <string name="radio_3">5</string>
    <string name="radio_label_text">Search Radius (miles)</string>

    <!--Strings for HostSearchFragment.java-->
    <string name="list_item_host_games_game_pic">Picture of Game</string>
    <string name="list_item_host_games_game_open">2 games open</string>
    <string name="list_item_host_games_button">Host Game</string>
    <string name="fragment_host_search_hint">Search…</string>

    <!--Strings for UserGameFragment.java-->
    <string name="list_item_games_game_pic">Picture of Game</string>
    <string name="list_item_games_game_open">No games open</string>
    <string name="list_item_games_button">Join Game</string>

    <!--Strings for menu-->
    <string name="menu_action_logout">Log Out</string>
    <string name="menu_action_settings">Settings</string>

    <!-- Strings for SessionActivity.java -->
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_session_started_title">Session Started</string>
    <string name="alert_dialog_session_started_message">The host has confirmed the current session. Please head to the event location and have fun!</string>
    <string name="alert_dialog_session_cancelled_title">Session Cancelled</string>
    <string name="alert_dialog_session_cancelled_message">The host has cancelled the session.</string>

    <!-- Strings for SessionFragment.java -->
    <string name="session_header_text">Current Session Info</string>
    <string name="time_left">30 minutes left</string>
    <string name="confirm_button_text">Game On</string>
    <string name="leave_button_text">Leave</string>
    <string name="session_confirmation_message">Would you like to start the session?</string>
    <string name="session_confirmation_title">Confirm Session</string>
    <string name="dialog_confirm_button_text">Game On!</string>
    <string name="dialog_cancel_button_text">Cancel</string>
    <string name="session_leave_title">Leave Session</string>
    <string name="session_leave_message">Would you like to leave this session?</string>
    <string name="session_leave_positive_button_text">Yes</string>
    <string name="timed_out_text">Timed Out</string>
    <string name="session_timed_out_message">Your current session has timed out. Please host a new one.</string>
    <string name="session_timed_out_title">Session Time Out</string>
    <string name="dialog_timed_out_button_text">OK</string>


    <!-- Strings for DisabledFragment.java -->
    <string name="disabled_text">You are currently in an open session.</string>
    <string name="title_activity_session">SessionActivity</string>

    <!-- Strings for menu_session.xml -->
    <string name="check_for_updates">Check for Updates</string>
    <string name="stop">Stop</string>

    <!-- Strings for PollService.java -->
    <string name="session_update_title">New Session Update</string>
    <string name="session_update_text">Session has changed. Click here to check it out!</string>
    <string name="session_start_title">Session Started!</string>
    <string name="session_start_text">Your current session has started!</string>
    <string name="session_cancelled_title">Session Cancelled</string>
    <string name="session_cancelled_text">We\'re sorry, but your current session has been cancelled.</string>
    <string name="fragment_register_firstname">First Name</string>
    <string name="fragment_register_lastname">Last Name</string>
    <string name="fragment_register_username">Username</string>
    <string name="session_host_tag">Host:</string>
    <string name="no_games_found">No games found nearby!</string>
    <string name="session_no_players_found">No players have joined.</string>
    <string name="user_in_session">Session is in progress</string>
    <string name="session_player_section">Players</string>
    <string name="alert_dialog_get_directions">Get directions</string>

</resources>
