<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/menu_action_current_session"
        android:title="@string/action_current_session"
        android:icon="@drawable/mr_ic_play_dark"
        android:orderInCategory="100"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_action_settings"
        android:title="@string/menu_action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_action_log_out"
        android:title="@string/menu_action_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
