<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Darkprimarycolor" >

    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/textView"
        android:layout_above="@+id/splash_login_button"
        android:textColor="#FFFFFF"
        android:textSize="72sp"
        android:textStyle="bold"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:fb_text="@string/fragment_splash_login_button"
        android:id="@+id/splash_login_button"
        android:layout_above="@+id/splash_register_button"
        app:fb_textColor="#FFFFFF"
        app:fb_textSize="32sp"
        app:fb_defaultColor="#2979FF"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/splash_register_button"
        android:layout_alignParentBottom="true"
        app:fb_text="@string/fragment_splash_register_button"
        app:fb_textColor="#FFFFFF"
        app:fb_textSize="32sp"
        app:fb_defaultColor="#f44336" />

</RelativeLayout>
