<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.example.ttpm.game_on.activities.ForgotPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_forgot_password_text"
        android:id="@+id/forgot_password_message_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/forgot_password_email_edittext"
        android:layout_below="@+id/forgot_password_message_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:hint="@string/fragment_forgot_password_email_hint_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_forgot_password_button"
        android:id="@+id/forgot_password_reset_password_button"
        android:layout_below="@+id/forgot_password_email_edittext"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
