<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Darkprimarycolor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ttpm.game_on.activities.RegisterActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/register_email_edittext"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:hint="@string/fragment_register_email"
        android:textColorHint="#ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/register_password_edittext"
        android:layout_below="@+id/register_email_edittext"
        android:layout_centerHorizontal="true"
        android:hint="@string/fragment_register_password"
        android:textColorHint="#ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/register_repeat_password_edittext"
        android:layout_below="@+id/register_password_edittext"
        android:layout_centerHorizontal="true"
        android:hint="@string/fragment_register_password_confirm"
        android:textColorHint="#ffffff" />

    <EditText
        android:hint="Please enter your name.."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/NameTextField"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/register_email_edittext"
        android:layout_alignEnd="@+id/register_email_edittext"
        android:textColorHint="#ffffff" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:fb_text="@string/fragment_register_register_button"
        android:id="@+id/register_register_button"
        android:layout_alignParentBottom="true"
        app:fb_textColor="#FFFFFF"
        app:fb_textSize="32sp"
        app:fb_defaultColor="#2979FF" />

</RelativeLayout>
