<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Darkprimarycolor" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingBottom="64dp"
        android:gravity="center_vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/login_email_edittext"
            android:hint="@string/fragment_login_email"
            android:textStyle="bold"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="Email Address"
            app:met_floatingLabelTextSize="18sp"
            app:met_primaryColor="#FF5722"
            app:met_underlineColor="#FFAB91"
            app:met_textColorHint="#FFFFFF" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/login_password_edittext"
            android:hint="@string/fragment_login_password"
            android:textStyle="bold"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="Password"
            app:met_floatingLabelTextSize="18sp"
            app:met_primaryColor="#FF5722"
            app:met_underlineColor="#FFAB91"
            app:met_textColorHint="#FFFFFF" />

    </LinearLayout>

    <mehdi.sakout.fancybuttons.FancyButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fb_text="@string/fragment_login_login_button"
        android:id="@+id/login_login_button"
        android:layout_above="@+id/login_forgot_password_button"
        app:fb_textColor="#FFFFFF"
        app:fb_textSize="32sp"
        app:fb_defaultColor="#2979FF"/>

    <mehdi.sakout.fancybuttons.FancyButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fb_text="@string/fragment_login_forgot_password_button"
        android:id="@+id/login_forgot_password_button"
        android:layout_alignParentBottom="true"
        app:fb_textColor="#FFFFFF"
        app:fb_textSize="32sp"
        app:fb_defaultColor="#f44336"/>

</RelativeLayout>
